Fixed flickering header on scroll (in particular on the discover page)

--- a/app/client/stylesheets/components/pu-app.sass
+++ b/app/client/stylesheets/components/pu-app.sass
@@ -21,3 +21,4 @@
             left: 0
             right: 0
             z-index: 15
+            transform: translateZ(0) // fixes flickering header on scroll
